Completed Basic Hibernation Setup